# movie-reservation-app-api

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py
api/v1/: __init__.py
api/v1/auth/: __init__.py  auth.py
api/v1/movies/: __init__.py  movies.py
api/v1/seats/: __init__.py  seats.py
api/v1/showtimes/: __init__.py  showtimes.py
api/v1/users/: users.py
app/controllers/: __init__.py  auth.py  movie.py  seat.py  showtime.py  user.py
app/models/: __init__.py  movie.py  reservation.py  seat.py  seat_reservation.py  showtime.py  user.py
app/repositories/: __init__.py  movie.py  seat.py  showtime.py  user.py
app/schemas/extras/: __init__.py  filter.py  pagination.py
app/schemas/request/: __init__.py  auth.py  movie.py  seat.py  showtime.py  user.py
app/schemas/response/: __init__.py  movie.py  seat.py  showtime.py  user.py
core/: config.py  enum.py  server.py
core/cache/: __init__.py  cache_tag.py  custom_key_maker.py  redis.py  redis_backend.py
core/controller/: base.py
core/db/: __init__.py  session.py  transactional.py
core/db/mixins/: timestamp.py
core/exceptions/: __init__.py  base.py
core/factory/: factory.py
core/fastapi/dependencies/: __init__.py  authentication.py  cache.py  current_user.py  permission.py
core/fastapi/middlewares/: authentication.py  response_log.py
core/repository/: base.py
core/security/: jwt.py  password.py
docker/: dev.Dockerfile  prod.Dockerfile
migrations/: env.py
migrations/versions/: 2024_08_18_0223-f567ece18f12_add_users_table.py  2024_09_17_0303-26ccb64fa5c6_add_movies_table.py  2024_09_18_0325-d68398464722_add_movies_table.py  2024_09_22_0401-691c467272fc_add_showtimes_table.py  2024_12_10_1430-51c0a7ce6272_add_reservations_table.py  2024_12_10_1447-aa9de0041c49_add_seats_table.py  2024_12_10_1455-dab9a4becb1d_add_seat_reservations_table.py
scripts/: bootstrap.sh
tests/: conftest.py
tests/api/: conftest.py
tests/api/v1/auth/: test_auth.py
tests/api/v1/movies/: test_movie_api.py
tests/api/v1/users/: test_user_api.py
tests/app/controllers/: test_auth_controller.py  test_movie_controller.py  test_user_controller.py
tests/core/dependencies/: test_authentication.py  test_cache.py  test_current_user.py  test_permission.py
tests/core/repository/: test_base.py
tests/core/security/: test_jwt_handler.py  test_password_handler.py
